--- a/public/views/tpl.jade
+++ b/public/views/tpl.jade
@@ -18,36 +18,9 @@ html(lang='en')
     link(href='http://fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css', rel='stylesheet')
   body
-    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/')
-            | Bit
-            span#logo_split
-            | Split
-            span#logo_split2 &NonBreakingSpace;
-        .navbar-collapse.collapse
-          ul.nav.navbar-nav
-            li
-              a(href='#') FAQ
-            li
-              a(href='#') The Math
-            li
-              a(href='#') Stats
-            li
-              a(href='#') Verification
-            li
-              a(href='#') API
-    // Main jumbotron for a primary marketing message or call to action
+    include menu
     block content
 
-    //   Bootstrap core JavaScript
-    // Placed at the end of the document so the pages load faster
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='build/bootstrap/js/bootstrap.min.js')
     script(src='/main.js')
