--- a/public/views/index4.jade
+++ b/public/views/index4.jade
@@ -39,12 +39,12 @@ block content
         h2 A lottery weighted to favor the bold.
 
         // h1 Jackpot size&colon;&nbsp;&nbsp;
-        //   span#jackpot-amount.font-color-bitcoin.no-symbol
+        //   span#jackpot-amount.font-color-bitcoin
         br
         br
         br
         h1.left Prize&colon;&nbsp;&nbsp;
-          span#prize-amount.font-color-bitcoin.no-symbol 
+          span#prize-amount.font-color-bitcoin 
         h1.left Next Winner&colon;&nbsp;&nbsp;
           span.font-color-bitcoin
             span.split-time-minutes &period;&period;&period;
