Eliminated the second version of the bet table, since maintaining older versions of layouts exactly the same is too much work.
Separated the glow from .font-color-bitcoin, and re-added the glow where it is needed.

Prepared the new table for 'win_probability'.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -5,7 +5,7 @@ block content
       .container.jumbotron-text
         h1
           | The&nbsp;
-          span#jackpot-amount.font-color-bitcoin
+          span#jackpot-amount.font-color-bitcoin.glow
           |  jackpot&apos;s average split time is 
           span.highlight
             span.split-time-minutes &period;&period;&period;
@@ -15,7 +15,7 @@ block content
           | When it splits&comma; the
           span.highlight  top contributor
           |  gets
-          span.font-color-bitcoin  half
+          span.font-color-bitcoin.glow  half
           | &period;&period;&period;
         include ctas
     .container
