--- a/public/views/index3.jade
+++ b/public/views/index3.jade
@@ -32,9 +32,9 @@ block content
     .jumbotron.jumbotron-headline.bg-color-usd
       .container.jumbotron-text
         h1 Jackpot size&colon;&nbsp;&nbsp;
-          span#jackpot-amount.font-color-bitcoin.no-symbol
+          span#jackpot-amount.font-color-bitcoin.glow
         h1 Top contributor gets&colon;&nbsp;&nbsp;
-          span#prize-amount.font-color-bitcoin.no-symbol half
+          span#prize-amount.font-color-bitcoin.glow half
         h1 Average split time&colon;&nbsp;&nbsp;
           span
             span.split-time-minutes &period;&period;&period;
