--- a/public/views/bet_tables.jade
+++ b/public/views/bet_tables.jade
@@ -1,28 +1,15 @@
 row.info-row
- .col-md-4
-   h2 Current Contributors
-   #current_top_contributors.table-responsive
+ .col-md-6
+   h2 The Contenders
+   #current_contenders.table-responsive
      table.table.table-striped
        thead
          tr
-           th Rank
            th User
            th Contribution
+           th Chance of Winning
        tbody
-   // End table-responsive
- .col-md-4
-   h2 Current Bets
-   #current_bets.table-responsive
-     table.table.table-striped
-       thead
-         tr
-           th ID
-           th User
-           th Timestamp
-           th Amount
-       tbody
-   // End table-responsive
- .col-md-4
+ .col-md-6
    h2 Past Winners
    #past_winners.table-responsive
      table.table.table-striped
@@ -30,6 +17,16 @@ row.info-row
          tr
            th User
            th Contribution
-           th Payout
+           th Prize
        tbody
-   // End table-responsive
+ // .col-md-4
+ //   h2 Current Bets
+ //   #current_bets.table-responsive
+ //     table.table.table-striped
+ //       thead
+ //         tr
+ //           th ID
+ //           th User
+ //           th Timestamp
+ //           th Amount
+ //       tbody
