--- a/public/views/index2.jade
+++ b/public/views/index2.jade
@@ -9,7 +9,7 @@ block content
               h1 Jackpot size&colon;
             td
               h1
-                span#jackpot-amount.font-color-bitcoin
+                span#jackpot-amount.font-color-bitcoin.glow
           tr
             td
               h1 Average split time&colon;
@@ -23,7 +23,7 @@ block content
               h1 Top contributor gets&colon;
             td
               h1
-                span.font-color-bitcoin half
+                span.font-color-bitcoin.glow half
         include ctas
     .container
       include bet_tables
