--- a/public/main.css
+++ b/public/main.css
@@ -68,6 +68,8 @@ h2.left {
 
 .font-color-bitcoin {
     color: gold;
+}
+.font-color-bitcoin.glow {
     text-shadow:0 0 8px gold,0 0 5px black;
 }
 
