--- a/public/views/bet_tables.jade
+++ b/public/views/bet_tables.jade
@@ -8,6 +8,8 @@ row.info-row
            th User
            th Contribution
            th Chance of Winning
+           th 
+           th Percent of pot
        tbody
  .col-md-6
    h2 Past Winners
@@ -19,14 +21,3 @@ row.info-row
            th Contribution
            th Prize
        tbody
- // .col-md-4
- //   h2 Current Bets
- //   #current_bets.table-responsive
- //     table.table.table-striped
- //       thead
- //         tr
- //           th ID
- //           th User
- //           th Timestamp
- //           th Amount
- //       tbody
