Centered the 'Prize' and 'Next Winner' elements.

--- a/public/views/index4.jade
+++ b/public/views/index4.jade
@@ -12,8 +12,8 @@ block head
       margin-top: 50px;
     }
     .jumbotron-text h1, .jumbotron-text h2 {
-      // text-align: left !important;
-      font-family: "Bitter" !important;
+      text-align: center !important;
+      font-family: "Bitter";
       color: white;
       margin-bottom: 30px !important;
     }
@@ -32,7 +32,7 @@ block content
     .jumbotron.jumbotron-headline.bg-color-usd
       .container.jumbotron-text
         h1 BitSplit
-        h2 A lottery that statistically favors higher contributions.
+        h2.tagline A lottery that statistically favors higher contributions.
         br
         br
         br
