Got rid of named HTML entities because they were causing trouble on old IE.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -6,17 +6,17 @@ block content
         h1
           | The&nbsp;
           span#jackpot-amount.font-color-bitcoin.glow
-          |  jackpot&apos;s average split time is 
+          |  jackpot&#39;s average split time is 
           span.highlight
-            span.split-time-minutes &period;&period;&period;
+            span.split-time-minutes ...
             |  minutes
-          | &period;&period;&period;
+          | ...
         h1
           | When it splits&comma; the
           span.highlight  top contributor
           |  gets
           span.font-color-bitcoin.glow  half
-          | &period;&period;&period;
+          | ...
         include ctas
     .container
       include bet_tables
