--- a/public/views/index2.jade
+++ b/public/views/index2.jade
@@ -6,21 +6,21 @@ block content
         table#big-info-table
           tr
             td
-              h1 Jackpot size&colon;
+              h1 Jackpot size:
             td
               h1
                 span#jackpot-amount.font-color-bitcoin.glow
           tr
             td
-              h1 Average split time&colon;
+              h1 Average split time:
             td
               h1
                 span.highlight
-                  span.split-time-minutes &period;&period;&period;
+                  span.split-time-minutes ...
                   |  minutes
           tr
             td
-              h1 Top contributor gets&colon;
+              h1 Top contributor gets:
             td
               h1
                 span.font-color-bitcoin.glow half
