--- a/public/views/index4.jade
+++ b/public/views/index4.jade
@@ -36,12 +36,12 @@ block content
         br
         br
         br
-        h1.left Prize&colon;&nbsp;&nbsp;
+        h1.left Prize:&nbsp;&nbsp;
           span#prize-amount.font-color-bitcoin.glow 
-        h1.left Next Winner&colon;&nbsp;&nbsp;
+        h1.left Next Winner:&nbsp;&nbsp;
           span.font-color-bitcoin.glow
-            span.split-time-minutes &period;&period;&period;
-            |  min countdown
+             span.split-time-minutes ...
+             |  min countdown
         include ctas
     .container
       include bet_tables
