--- a/public/views/index3.jade
+++ b/public/views/index3.jade
@@ -31,13 +31,13 @@ block head
 block content
     .jumbotron.jumbotron-headline.bg-color-usd
       .container.jumbotron-text
-        h1 Jackpot size&colon;&nbsp;&nbsp;
+        h1 Jackpot size:&nbsp;&nbsp;
           span#jackpot-amount.font-color-bitcoin.glow
-        h1 Top contributor gets&colon;&nbsp;&nbsp;
+        h1 Top contributor gets:&nbsp;&nbsp;
           span#prize-amount.font-color-bitcoin.glow half
-        h1 Average split time&colon;&nbsp;&nbsp;
+        h1 Average split time:&nbsp;&nbsp;
           span
-            span.split-time-minutes &period;&period;&period;
+            span.split-time-minutes ...
             |  minutes
         include ctas
     .container
