Updated countdown timer.

--- a/public/views/index4.jade
+++ b/public/views/index4.jade
@@ -37,11 +37,10 @@ block content
         br
         br
         h1.left Prize:&nbsp;&nbsp;
-          span#prize-amount.font-color-bitcoin.glow 
+          span#prize-amount.font-color-bitcoin.glow
         h1.left Next Winner:&nbsp;&nbsp;
           span.font-color-bitcoin.glow
-             span.split-time-minutes ...
-             |  min countdown
+             span.split-countdown-timer ...
         include ctas
     .container
       include bet_tables
