--- a/public/views/script_bet_tables.jade
+++ b/public/views/script_bet_tables.jade
@@ -13,5 +13,5 @@ script.
     refresh_past_winners(json);
   });
   socket.on("current_bets", function (json) {
-    refresh_current_bets(json);
+    // refresh_current_bets(json);
   });
