--- a/public/views/ctas.jade
+++ b/public/views/ctas.jade
@@ -1,4 +1,4 @@
-p(style='text-align:center;')
+p.center
   a.btn.btn-primary.btn-cta(role='button', href='/learn', style="margin-right:10px;")
     span.highlight Learn More
   a.btn.btn-primary.btn-cta(role='button', href='/play')
