Amount placed for a bet is now in bitcoins, not satoshis.

--- a/public/views/play.jade
+++ b/public/views/play.jade
@@ -38,10 +38,10 @@ block content
            row.info-row
              form(role="form")
                .form-group
-                 input#bet_amount.form-control.center-block(type="number", step=".01", placeholder="Amount in BTC",style="width:50%;")
+                 input#bet_amount_btc.form-control.center-block(type="number", step=".01", placeholder="Amount in BTC",min=".0001",style="width:50%;")
              .center
                a.btn.btn-primary.btn-cta(role='button', href='#', style="margin-right:10px;")
-                 span.highlight(onclick="place_bet($('#bet_amount').val())") Place Bet
+                 span.highlight(onclick="place_bet(to_satoshis($('#bet_amount_btc').val()))") Place Bet
          .col-md-3#account_info.tall
            h2 Balance
            h1.font-color-bitcoin
