--- a/public/views/play.jade
+++ b/public/views/play.jade
@@ -5,13 +5,15 @@ extends tpl
 block head
   style.
     #other_info, #account_info, #bet_interface {
-      background: white;
+      background:rgba(255, 255, 255, 0.2);
+      /* IE? */
+      filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#000000,endColorstr=#000000);
       padding: 30px;
     }
 
     #bet_interface {
-      border-left: 1px solid black;
-      border-right: 1px solid black;
+      border-left: 1px dotted gray;
+      border-right: 1px dotted gray;
     }
 
     #top-table {
@@ -51,6 +53,9 @@ block content
          .col-md-6#bet_interface
            row.info-row &nbsp;
            row.info-row
+             br
+             br
+             br
              form(role="form")
                .form-group
                  input#bet_amount_btc.form-control.center-block(type="number", step=".01", placeholder="Amount in BTC",min=".0001",style="width:50%;")
