--- a/public/views/tpl.jade
+++ b/public/views/tpl.jade
@@ -29,10 +29,26 @@ html(lang='en')
     script(src='/main.js')
     script(src='/socket.io/socket.io.js')
     script.
+      /* Google Analytics */
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-47822938-1', 'bitsplit.it');
       ga('send', 'pageview');
+
+      /* Snowplow */
+      var _snaq = _snaq || [];
+
+      _snaq.push(['setCollectorCf', 'd1xeermhwlpt1e']);
+      _snaq.push(['setAppId', 'bitsplit.it']);
+      _snaq.push(['setCookieDomain', 'bitsplit.it']);
+      _snaq.push(['trackPageView']);
+
+      (function() {
+      var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
+      sp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://d1fc8wv8zag5ca.cloudfront.net/0.13.1/sp.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sp, s);
+      })();
+      /* End Snowplow */
     block scripts
