--- a/public/views/play.jade
+++ b/public/views/play.jade
@@ -69,7 +69,7 @@ block content
              | ∞
            br
            h2 User
-           h2#user_id.font-color-bitcoin !{user_id}
+           h2#user.font-color-bitcoin !{user_name}
            br
            .center
              a.btn.btn-primary(role='button', href='#', style='margin-right:5px;') Deposit
