--- a/public/views/script_bet_tables.jade
+++ b/public/views/script_bet_tables.jade
@@ -1,10 +1,17 @@
 script.
   var socket = io.connect(!{socket_address});
+
+  socket.on("error", function (json) {
+    bootstrap_alert.warning(json.msg, 3000);
+  });
   socket.on("refresh", function (json) {
     window.location.reload();
   });
   socket.on("config", function (json) {
     refresh_config(json);
+  });
+  socket.on("personal_stats", function (json) {
+    update_personal_stats(json);
   });
   socket.on("current_stats", function (json) {
     refresh_current_stats(json);
