--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,12 @@
+#alert {
+  position: absolute;
+  top: 30px;
+  left:50%;
+  width:400px;
+  margin-left:-200px;
+  z-index: 1100;
+}
+
 #login {
     background: white;
     height: 300px;
