--- a/public/views/tpl.jade
+++ b/public/views/tpl.jade
@@ -23,6 +23,7 @@ html(lang='en')
   body
     include menu
     block content
+    span#alert
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='build/bootstrap/js/bootstrap.min.js')
