--- a/public/main.css
+++ b/public/main.css
@@ -1,23 +1,3 @@
-#alert {
-  position: absolute;
-  top: 30px;
-  left:50%;
-  width:400px;
-  margin-left:-200px;
-  z-index: 1100;
-}
-
-#login {
-    background: white;
-    height: 300px;
-    width: 485px;
-    z-index: 1002;
-
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
 @font-face {
   font-family: 'Alpha Echo';
   font-style: normal;
@@ -194,4 +174,34 @@ h2.left {
 #big-info-table h1 {
     text-align: left !important;
     margin-left: 15px;
+}
+
+#past_winners #disbursements {
+  background: #eee;
+  text-align: center;
+}
+#past_winners #winner {
+  background: #eee;
+  border-right: 1px dotted black;
+  text-align: center;
+}
+
+#alert {
+  position: absolute;
+  top: 30px;
+  left:50%;
+  width:400px;
+  margin-left:-200px;
+  z-index: 1100;
+}
+
+#login {
+    background: white;
+    height: 300px;
+    width: 485px;
+    z-index: 1002;
+
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
