--- a/public/views/bet_tables.jade
+++ b/public/views/bet_tables.jade
@@ -12,12 +12,19 @@ row.info-row
            th Percent of pot
        tbody
  .col-md-6
-   h2 Past Winners
+   h2 Past Jackpots
    #past_winners.table-responsive
      table.table.table-striped
        thead
          tr
-           th User
+           th(colspan=1)
+           th(colspan=2)#winner Winner
+           th(colspan=3)#disbursements Disbursements
+         tr
+           th Size
+           th Name
            th Contribution
            th Prize
+           th Next Jackpot
+           th House
        tbody
