Now the UI is much better able to handle different currencies.
The js api is also pretty well-organized.  There is an API for the UI, and an API for programmatically doing things.

It keeps track of which currency needs to be acted upon, and will act differently, with depositing and withdrawing, for different classes of currencies.

--- a/public/views/menu.jade
+++ b/public/views/menu.jade
@@ -23,3 +23,9 @@
           a(href='#') Verification
         li
           a(href='#') API
+      ul.nav.navbar-nav.navbar-right
+        li
+          span(style="color:white") Currency: 
+          select(id="currency_type",onchange="change_currency_type($(this).val());" style='margin-top:15px;')
+            option(value="fake") Fake
+            option(value="btc") Bitcoin
