--- a/public/views/play.jade
+++ b/public/views/play.jade
@@ -60,7 +60,7 @@ block content
                .form-group
                  input#bet_amount_btc.form-control.center-block(type="number", step=".01", placeholder="Amount in BTC",min=".0001",style="width:50%;")
              .center
-               a.btn.btn-primary.btn-cta(role='button', href='#', style="margin-right:10px;", onclick="place_bet(to_satoshis($('#bet_amount_btc').val()))")
+               a.btn.btn-primary.btn-cta(role='button', href='#', style="margin-right:10px;", onclick="BitSplit.currency.bet($('#bet_amount_btc').val(), function() { console.log('callback1')})")
                  span.highlight Place Bet
          .col-md-3#account_info.tall
            h2 Balance
@@ -73,7 +73,7 @@ block content
            br
            .center
              a#deposit.btn.btn-primary(role='button', style='margin-right:5px;') Deposit
-             a.btn.btn-primary(role='button', href='#') Withdraw
+             a#withdraw.btn.btn-primary(role='button', href='#') Withdraw
 
     .container
       include bet_tables
