--- a/public/views/menu.jade
+++ b/public/views/menu.jade
@@ -25,7 +25,11 @@
           a(href='#') API
       ul.nav.navbar-nav.navbar-right
         li
-          span(style="color:white") Currency: 
-          select(id="currency_type",onchange="change_currency_type($(this).val());" style='margin-top:15px;')
-            option(value="fake") Fake
-            option(value="btc") Bitcoin
+          table
+            tr
+              td
+                span(style="color:white") Currency: 
+              td(style="padding-left: 10px;")
+                select(id="currency_type",onchange="change_currency_type($(this).val());" style='margin-top:15px;')
+                  option(value="fake") Fake
+                  option(value="btc") Bitcoin
