--- a/public/views/tpl.jade
+++ b/public/views/tpl.jade
@@ -15,9 +15,9 @@ html(lang='en')
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-    link(href='http://fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
-    link(href='http://fonts.googleapis.com/css?family=Bitter', rel='stylesheet', type='text/css')
-    link(href='http://fonts.googleapis.com/css?family=PT+Sans', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Bitter', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=PT+Sans', rel='stylesheet', type='text/css')
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css', rel='stylesheet')
     block head
   body
