Users can sign in, and added some left-out code that allows users to withdraw BTC.

--- a/public/main.css
+++ b/public/main.css
@@ -205,3 +205,8 @@ h2.left {
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+#toggle-password-visibilty {
+  opacity: 0.8;
+  text-decoration : underline;
+}
