--- a/public/views/menu.jade
+++ b/public/views/menu.jade
@@ -18,11 +18,7 @@
         li
           a(href='#') The Math
         li
-          a(href='#') Stats
-        li
-          a(href='#') Verification
-        li
-          a(href='#') API
+          a(href='#' onclick="temp.login();") Sign In
       ul.nav.navbar-nav.navbar-right
         li
           table
