--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,27 +1,298 @@
-extends tpl
+doctype html
+html
+  head
+    title BitSplit&period;it
+    meta(name='viewport', content='width=device-width')
+    link(rel='stylesheet', href='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(type='text/javascript', src='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(src='d3.v3.min.js')
+    link(rel='stylesheet', href='main.css')
+    link(rel='stylesheet', href='royalslider.css')
+    link(rel='stylesheet', href='skins/minimal-white/rs-minimal-white.css')
+    link(href='//fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
+  body
+    // Background
+    #bg
+      img(src='images/bg-reduced.jpg', alt='')
+    // Navigation Bar
+    #bitsplitnav.navbar.transparent.navbar-fixed-top.navbar-inverse
+      .navbar-header
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#')
+          img(src='https://www.filepicker.io/api/file/DTOJ2HhRjWe2nNPEVA3P')#logo
+      .navbar-collapse.collapse
+        ul.nav.navbar-nav.navbar-right
+          li
+           div(style="margin-right:50px;")
+            a.btn.btn-currency.fake.active(onclick="change_currency_type('fake')") SANDBOX
+            a.btn.btn-currency.btc(onclick="change_currency_type('btc')") BITCOINS
+          li
+            a(href='#howitworks', data-toggle='modal', data-target='#howitworks') How It Works
+          li
+            a(href='#contact', data-toggle='modal', data-target='#contact') Contact
+          li.active
+            // a#signinbtn(href='#signin', data-toggle='modal', data-target='#signin') Sign In
+            a#signinbtn(href='#signin', onclick="temp.login();") Sign In
+    block content
+    div.overlay-solid
+    // Main Screen Slider
+    section#gameslider
+      #bitsplitgames.royalSlider.rsMinW
+        // Slide 1
+        .row
+          .col-md-4.nosidemargin.table-responsive
 
-block content
-    .jumbotron.jumbotron-headline.bg-color-usd
-      .container.jumbotron-text
-        h1
-          | The&nbsp;
-          span#jackpot-amount.font-color-bitcoin.glow
-          |  jackpot&#39;s average split time is 
-          span.highlight
-            span.split-time-minutes ...
-            |  minutes
-          | ...
-        h1
-          | When it splits&comma; the
-          span.highlight  top contributor
-          |  gets
-          span.font-color-bitcoin.glow  half
-          | ...
-        include ctas
-    .container
-      include bet_tables
-      hr
-      footer
+            // h4.fadedtext Current Participants
+            ul.nav.nav-pills(style="margin-left:8%;")
+              li.active
+                a(href='#home', data-toggle='pill') Current Participants
+              li
+                a(href='#profile', data-toggle='pill') Past Winners
+            .tab-content
+              .tab-pane.active#home
+                table#currentbets.table.table-condensed.table-hover.transltable.centered
+                  thead
+                    tr
+                      th PLAYER
+                      th CHANCE
+                      th TOTAL BET
+                      th &percnt; OF POT
+                  tbody
+              .tab-pane#profile
+                table#pastwinners.table.table-condensed.table-hover.transltable.centered
+                  thead
+                    tr
+                      th(colspan=1) POT
+                      th(colspan=2)#winner WINNER
+                      th(colspan=3)#disbursements DISBURSEMENTS
+                    tr
+                      th SIZE
+                      th NAME
+                      th CONTRIBUTION
+                      th PRIZE
+                      th NEXT JACKPOT
+                      th HOUSE
+                  tbody
+          .col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
+            .betchart
+            .charttarget
+              h4#currenrndsize.text-center CURRENT ROUND PRIZE
+              h1#potprize.text-center
+          .col-md-3.col-lg-4.nosidemargin
+            .row.summary
+              h4.summarysmall.golden.text-right YOUR CHANCE OF WINNING
+              h1.summarybig.lightyellow.text-right.my_win_chance#my_win_chance
+            // .row.summary
+            //   h4.summarysmall.golden.text-right TAKE HOME AMOUNT
+            //   h1.summarybig.lightyellow.text-right 0&period;00012500?
+            .row.summary
+              // TODO: Force this to be a float
+              h4.summarysmall.golden.text-right YOUR CONTRIBUTION
+              h1.summarybig.lightyellow.text-right.my_contribution#my_contribution
+            // .row.netposition.loss
+            //   h4.summarysmall.golden POTENTIAL NET
+            //   h1.summarybig.lightyellow.text-right 34&period;0000
+        // Slide 2
+        // .row
+        //   .col-md-4.nosidemargin.table-responsive
+        //     h4.fadedtext Current Participants
+        //     table#currentbets.table.table-condensed.table-hover.transltable.centered
+        //       thead
+        //         tr
+        //           th PLAYER
+        //           th CHANCE
+        //           th TOTAL BET
+        //           th &percnt; OF POT
+        //       tbody
+        //         tr
+        //           td Joey
+        //           td 45&percnt;
+        //           td 21&period;3
+        //           td 30&percnt;
+        //         tr
+        //           td Mike
+        //           td 38&percnt;
+        //           td 6&period;03
+        //           td 25&percnt;
+        //         tr
+        //           td Shawn
+        //           td 32&percnt;
+        //           td 2&period;00
+        //           td 20&percnt;
+        //         tr
+        //           td Josh
+        //           td 10&percnt;
+        //           td 1&period;3
+        //           td 10&percnt;
+        //         tr.yourposition
+        //           td You
+        //           td 3&percnt;
+        //           td 0&period;3
+        //           td 10&percnt;
+        //   .col-md-5.col-lg-4.nosidemargin.chart
+        //     .betchart
+        //     .charttarget
+        //       h4#currenrndsize.text-center CURRENT ROUND PRIZE
+        //       h1#potprize.text-center 34&period;0000
+        //   .col-md-3.col-lg-4.nosidemargin
+        //     .row.summary
+        //       h4.summarysmall.golden.text-right YOUR CHANCE OF WINNING
+        //       h1.summarybig.lightyellow.text-right 68&percnt;
+        //     .row.summary
+        //       h4.summarysmall.golden.text-right TAKE HOME AMOUNT
+        //       h1.summarybig.lightyellow.text-right 0&period;00012500
+        //     .row.summary
+        //       h4.summarysmall.golden.text-right YOUR CONTRIBUTION
+        //       h1.summarybig.lightyellow.text-right 
+        //     .row.netposition.profit
+        //       h4.summarysmall.golden POTENTIAL NET
+        //       h1.summarybig.lightyellow.text-right 34&period;0000
+    // Betting Navigation
+    section.navbar-fixed-bottom.bitsplitbetnav
+      .bigcounter
+        span.countertop
+          .text-center#nextRoundTitle Next Round
+          #nextRoundTime.text-center
+      .row
+        .pull-left.clearfix.col-md-3.col-lg-3.bit.bitbank
+          a.my_user_name.welcome
+          br
+          // h2 &dollar;0&period;0002300
+          h2.my_balance
+          .btn-group.btn-group.btn-group-justified.btn-group-transparent
+            a.btn.btn-default#withdraw Withdraw
+            a.btn.btn-default#deposit Deposit
+        .col-md-6.col-lg-6.btcchance
+          // | Risk Chance Calculation
+          // a  Learn about Smart API bidding
+          | Place Your Bet By Percentage of Prize
+          .pull-right.btn-group.btn-group-justified.btn-group-transparent.btccost#bet_amounts
+            // a.btn.btn-default 0&period;0002300
+            a.btn.btn-default(percentage="50") 
+            a.btn.btn-default(percentage="20") 
+            a.btn.btn-default(percentage="10") 
+            a.btn.btn-default(percentage="5") 
+            a.btn.btn-default(percentage="1") 
+            a.btn.btn-default(percentage="custom")
+              input(type="text", value="0.00000001")#custom_bet_input.form-control.input-sm
+          .pull-right.btn-group.btn-group-justified#bet_buttons
+            a.btn.btn-success(percentage="50") 50&percnt;
+            a.btn.btn-success(percentage="20") 20&percnt;
+            a.btn.btn-success(percentage="10") 10&percnt;
+            a.btn.btn-success(percentage="5") 5&percnt;
+            a.btn.btn-success(percentage="1") 1&percnt;
+            a.btn.btn-success(percentage="custom") Custom Bet
+        .col-md-3.bitbank#right_panel
+          h4.text-left User Name
+          h4.info.my_user_name.text-left
+          h4.text-left Password (
+            span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
+            |)
+          h4.info#password.invisible.text-left
+    // End round Modal
+    #endofround.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true').pointer-events-none
+      .modal-dialog.modal-md
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title End of Round
+          .modal-body
+          .modal-footer
+    // FAQ Modal
+    #howitworks.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title How It Works
+          .modal-body
+            p BitSplit is a bitcoin micro-lottery where larger total bets have a disproportionately higher chance of winning.
 
-block scripts
-  include script_bet_tables
+            p It&apos;s a lottery where you can consistently earn money if you play strategically.
+
+            p Play around with the pretend money you received for signing up, and see the game in action!
+
+            p If you&apos;re feeling feisty, try to steal some real money from the bitcoin pot with the 1 satoshi you&apos;ve been given :).
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    #faqcontent.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title Frequent Questions Answered
+          .modal-body
+            dl.dl-horizontal
+              dt What is Bitsplit the thinking man&apos;s game&quest;
+              dd Long answer goes here to explain why Bitsplit is fun and smart&period;
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // The Math Modal
+    #themath.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title The Math Explained
+          .modal-body
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // Verification Modal
+    #verification.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title Verification
+          .modal-body
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // API Modal
+    #api.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title The API Explained
+          .modal-body
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // Contact Modal
+    #contact.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog.modal-lg
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title Contact Us
+          .modal-body
+            p We&apos;d love to hear from you!
+            p Comments, suggestions, questions, ideas -- even complaints -- are all welcome.
+            p You can contact us via 
+              a(href="https://www.facebook.com/bitsplit") facebook.com/bitsplit
+              |  or 
+              a(href="mailto:admin@bitsplit.it?Subject=Hi!") admin@bitsplit.it
+              | .
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // Sign-In Modal
+    #signin.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+            h4#myModalLabel.modal-title Sign In
+          .modal-body
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+    // Jquery Scripts
+    script(type='text/javascript', src='jquery.royalslider.min.js')
+    script(type='text/javascript', src='jquery.easing-1.3.js')
+    // Main Slider Initiation Code
+    script(type='text/javascript', src='chart.custom.js')
+    script(type='text/javascript', src='main.js')
+    script(type='text/javascript', src='/socket.io/socket.io.js')
+    include common_script
