--- a/public/main.css
+++ b/public/main.css
@@ -197,18 +197,17 @@ polyline{
   fill: none;
 }
 
-h4#currenrndsize {
-    margin-top: 102px;
-    margin-bottom: 2px;
-    color: #96530C;
+#currenrndsize {
+    fill: #96530C;
     font-size: 16px;
+    font-weight: bold;
 }
 #potprize {
-    font-size: 40px;
+    font-size: 30px;
     margin-top: 0;
     font-weight: bold;
-    color: #702000;
-    letter-spacing: -3px;
+    fill: #702000;
+    letter-spacing: -2;
 }
 
 div.row.summary {
@@ -440,26 +439,8 @@ div.row.summary:first-child h4 {
   text-align: center;
 }
 
-.charttarget {
-  background: #F7D45E;
-  border-radius: 57%;
-  height: 260px;
-  width: 260px;
-  position: absolute;
-  top: 98px;
-  left: 50%;
-  /* Oval 1: */
-  margin-left: -140px;
-  background-image: -o-linear-gradient(-117deg, #FAE187 1%, #ECC43D 100%);
-  background-image: -moz-linear-gradient(-117deg, #FAE187 1%, #ECC43D 100%);
-  background-image: -ms-linear-gradient(-117deg, #FAE187 1%, #ECC43D 100%);
-  background-image: linear-gradient(-207deg, #FAE187 1%, #ECC43D 100%);
-
-  font-family: 'Montserrat', sans-serif;
-  -webkit-box-shadow: 0 0px 5px rgba(39, 119, 116, 0.26);
-  box-shadow: 0 0px 5px rgba(39, 119, 116, 0.26);
-  border-top: 2px solid rgba(252, 241, 197, 0.86);
-  border-bottom: 2px solid rgba(252, 241, 197, 0.86);
+.chart_center {
+  fill: #F7D45E;
 }
 
 div.betchart svg {
