--- a/public/main.css
+++ b/public/main.css
@@ -14,10 +14,14 @@ body {
 
 #bg {
   position: fixed; 
-  top: -50%; 
-  left: -50%; 
-  width: 200%; 
-  height: 200%;
+ /* top: -50%; 
+  left: -50%;*/ 
+  width: 100%; 
+  height: 100%;
+  background: url("images/bg-reduced.jpg");
+  background-size: 100% auto;
+  opacity: 0.0;
+   
 }
 #bg img {
   position: absolute; 
@@ -101,7 +105,7 @@ margin-top: -30px;
 }
 
 #gameslider {
-  padding-top: 11%;
+ /* padding-top: 11%;*/
 }
 
 .dl-horizontal dt {
@@ -210,6 +214,26 @@ polyline{
     letter-spacing: -2;
 }
 
+
+h4#currenrndsize {
+    margin-top: 102px;
+    margin-bottom: 2px;
+    color: #96530C;
+    font-size: 16px;
+}
+#potprize {
+    font-size: 40px;
+    margin-top: 0;
+    font-weight: bold;
+    color: #702000;
+    letter-spacing: -3px;
+}
+
+div#endofround {
+overflow: hidden;
+}
+
+
 div.row.summary {
 width: 88%;
 border-bottom: 1px solid rgba(157, 241, 250, 0.31);
@@ -218,7 +242,7 @@ padding-bottom: 5px;
 padding-top: 8px;
 } 
 
-.bitbank >ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã‚Â ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€šÃ‚Â ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€šÃ‚Â¦ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã‚Â ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã‚Â¦ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â .btn-group-transparent > .btn {
+.bitbank > .btn-group-transparent > .btn {
     background-color: #333;
     background: #333;
 }
@@ -261,12 +285,15 @@ div.bitbank div.btn-group.btn-group-lg.btn-group-transparent > btn-default {
 div.bigcounter {
     background: linear-gradient(-180deg, #FAE187 1%, #ECC43D 100%);
     height: 8px;
-    width: 33%;
+    width: 0%;
     position: relative;
     margin-top: -3px;
+    -webkit-transition: width 0.5s; /* For Safari 3.1 to 6.0 */
+transition: width 0.5s;
+
 }
 span.countertop {
-    background: linear-gradient(-180deg, #FAE187 1%, #ECC43D 100%);
+    /* background: linear-gradient(-180deg, #FAE187 1%, #ECC43D 100%); */
 
     /* width: 20px; */
     /* height: 20px; */
@@ -276,17 +303,19 @@ span.countertop {
     /* right: -8px; */
 
     width: 100px;
-    height: 100px;
+    height: 58px;
     margin-top: -50px;
-    border-radius: 50%;
+    border-radius: 1%;
     position: absolute;
-    right: -8px;
+    color: rgba(255, 255, 255, 0.99);
+    right: 0px;
 
     display: block;
     float: right;
     z-index: 999;
     border-top: 1px solid rgba(252, 241, 197, 1);
-    box-shadow: -1px 0px 0px rgba(36, 22, 5, 0.34);
+    /* box-shadow: -1px 0px 0px rgba(36, 22, 5, 0.34); */
+    background: rgba(22, 22, 22, 0.67);
 }
 
 .btccost {
@@ -533,7 +562,7 @@ polyline{
     bottom:0px;
     left:0px;
     right:0px;
-    background-color: white;
+    background-color: rgba(1, 21, 24, 0.79);
     opacity: 1;
     display: block;
     z-index: 10001;
@@ -601,8 +630,9 @@ table#pastwinners>thead>tr>th {
 
 #nextRoundTitle {
   font-weight: 700;
-  margin-top: 25px;
+  margin-top: 5px;
   font-size: 0.9em;
+  color: rgba(57, 236, 243, 0.36);
 }
 #nextRoundTime {
 
