--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -6,10 +6,13 @@ html
     link(rel='stylesheet', href='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     script(type='text/javascript', src='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(type='text/javascript', src='alertify.js')
     script(src='d3.v3.min.js')
     link(rel='stylesheet', href='main.css')
     link(rel='stylesheet', href='royalslider.css')
     link(rel='stylesheet', href='skins/minimal-white/rs-minimal-white.css')
+    link(rel='stylesheet', href='alertify.core.css')
+    link(rel='stylesheet', href='alertify.bootstrap.css')
     link(href='//fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
   body
     // Background
@@ -37,6 +40,7 @@ html
           li.active
             // a#signinbtn(href='#signin', data-toggle='modal', data-target='#signin') Sign In
             a#signinbtn(href='#signin', onclick="temp.login();") Sign In
+    include chat
     block content
     div.overlay-solid
     // Main Screen Slider
@@ -190,15 +194,7 @@ html
             span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
             |)
           h4.info#password.invisible.text-left
-    // End round Modal
-    #endofround.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true').pointer-events-none
-      .modal-dialog.modal-md
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title End of Round
-          .modal-body
-          .modal-footer
+          h4#chat_toggle.text-left Show Chat
     // FAQ Modal
     #howitworks.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
       .modal-dialog.modal-lg
